--- a/markdown/004_machine-learning-supervised.Rmd
+++ b/markdown/004_machine-learning-supervised.Rmd
@@ -64,6 +64,7 @@ install.packages(c("tidyverse", "tidymodels"))
 library(tidyverse)
 library(tidymodels)
 library(rpart)
+library(naivebayes)
 library(rpart.plot)
 ```
 
