--- a/markdown/003_time-series-analysis.Rmd
+++ b/markdown/003_time-series-analysis.Rmd
@@ -1,11 +1,12 @@
 ---
-title: "**Modul 3: Time Series Analysis**"
-author: "Muhammad Apriandito - Digital Business Experience"
+title: '**Modul 3: Time Series Forecasting**'
+author: "Manahan Siallagan - Muhammad Apriandito"
 output:
   html_document:
     theme: paper
     highlight: tango
     df_print: paged
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -16,11 +17,8 @@ knitr::opts_chunk$set(dev = "png",
                       tidy='styler', tidy.opts=list(strict=FALSE), 
                       fig.align = "center")
 options(scipen=10000)
+set.seed(1234)
 ```
-
-### **Modul Description**
-
-Time series forecasting is a technique for the prediction of events through a sequence of time. The techniques predict future events by analyzing the trends of the past, on the assumption that future trends will hold similar to historical trends.
 
 ------------------------------------------------------------------------
 
@@ -28,7 +26,7 @@ Time series forecasting is a technique for the prediction of events through a se
 
 Please read the following materials.
 
-1.  Forecasting: Principles and Practice: <https://otexts.com/fpp2/>
+1.  [Forecasting: Principles and Practice](https://otexts.com/fpp2/){.uri}
 
 ------------------------------------------------------------------------
 
@@ -36,75 +34,122 @@ Please read the following materials.
 
 Based on the reading materials, please answer the following questions and submit it via google classroom before the class starts.
 
-1.  How many data types and structures are there in the R programming language?
+1.  What is Time Series forecasting?
 
-2.  State the type of control flow?
+2.  Mention at least 2 algorithms that are commonly used for forecasting
 
-3.  What do the R Packages mean?
+3.  Mention at least 3 evaluation metrics that can be used to measure the performance of the forecasting model
 
 ------------------------------------------------------------------------
 
-### **Case: Superstore Retail**
+### **Case: Momoshop**
 
-Superstore is a retail company in the United States that sells a variety of office and household equipment. The superstore has an e-commerce platform where customers can order goods online through the platform.The E-commerce platform has been operating since January 2014.
+Momoshop is a shop that sells a variety of snacks. Momoshop management wants to predict how sales will be in 2021. The management provides monthly sales data since it first started operating in 2005.
 
-Selama E-commerce mengalami penjualan yang cukup fluktuatif,
+#### **Time Series Forecasting**
 
-Ingin memprediksi bagaimana penjualan ditahun 2019
+Time series forecasting is a technique for the prediction of events through a sequence of time. The techniques predict future events by analyzing the trends of the past, on the assumption that future trends will hold similar to historical trends. In this case we will us time series forecasting to forecast Momoshop's sales in 2021.
 
-#### **Load library**
+##### **Setup**
+
+To do time series forecasting, we need to install and load the required packages.
+
+```{r eval=FALSE, include= TRUE}
+# Install package
+install.packages(c("tidyverse", 
+                   "lubridate", 
+                   "readxl",
+                   "timetk", 
+                   "tidymodels", 
+                   "modeltime"))
+```
 
 ```{r message=FALSE, warning=FALSE}
-# Load library
+# Load package
 library(tidyverse)
+library(lubridate)
 library(readxl)
 library(timetk)
 library(tidymodels)
 library(modeltime)
 ```
 
-#### **Load Data**
+##### **Load Data**
+
+After the required packages are installed and loaded, we can directly load Momoshop sales data into the R environment.
 
 ```{r message=FALSE, warning=FALSE}
 # Load Data
-df <- read_csv("data/Superstore-sales.csv") 
-```
-
-#### **Visualize Data**
-
-```{r message=FALSE, warning=FALSE}
-# Visualize Data
-df %>%
-  plot_time_series(date, sales, .interactive = FALSE)
+df <- read_csv2("data/momoshop-sales.csv") 
 ```
 
 ```{r}
-# Split
-splits <- df %>%
+# Show data
+df
+```
+
+It can be seen above, there are still errors in the data. The date variable should have the data type `date` not `character`. We can fix this using the `dmy()` function.
+
+```{r}
+# Fix Data
+df_fix <- df %>%
+  mutate(date = dmy(date))
+```
+
+##### **Visualize Data**
+
+In the first stage, we can visualize Momoshop sales data to get basic insights such as trends, seasonality, and so on.
+
+```{r message=FALSE, warning=FALSE}
+# Visualize Data
+df_fix %>%
+  plot_time_series(date, sales, .interactive = FALSE)
+```
+
+##### Split Data
+
+Before creating a forecast model, the data must first be split into training and testing. Training data is used to create models, while testing data is used to evaluate model performance.
+
+```{r}
+# Split data
+splits <- df_fix %>%
   time_series_split(assess = "1 year", cumulative = TRUE)
 ```
 
 ```{r}
+# Visualize
 splits %>%
   tk_time_series_cv_plan() %>%
   plot_time_series_cv_plan(date, sales, .interactive = FALSE)
 ```
 
-#### **Model Fit**
+##### Create & Fit Multiple Models
+
+In R we get several forecasting models at once. In this case we will use 2 commonly used models for forecasting, namely ARIMA and ETS. we can set the model first.
 
 ```{r}
+# Set ARIMA Model
 model_fit_arima <- arima_reg() %>%
   set_engine("auto_arima") %>%
   fit(sales ~ date, training(splits))
 ```
 
 ```{r}
-model_table <- modeltime_table(
-  model_fit_arima
-) 
-
-model_table
+# Set ETS Model
+model_fit_ets <- exp_smoothing() %>%
+    set_engine(engine = "ets") %>%
+    fit(sales ~ date, data = training(splits))
 ```
+
+```{r}
+# Add model to model table
+model_table <- modeltime_table(
+  model_fit_arima,
+  model_fit_ets
+) 
+```
+
+##### **Calibrate the model to a testing set**
 
 ```{r}
 calibration_table <- model_table %>%
@@ -113,32 +158,41 @@ calibration_table <- model_table %>%
 calibration_table
 ```
 
-```{r message=FALSE, warning=FALSE}
-calibration_table %>%
-  modeltime_forecast(actual_data = df) %>%
-  plot_modeltime_forecast(.interactive = FALSE)
-```
+##### Testing Set Forecast & Accuracy Evaluation
+
+Next, we can see the performance of our model using evaluation metrics such as mae, mape, rmse, etc. In addition, we can also use visualization to see the deviation of the predicted value from the actual value.
 
 ```{r}
+# Menampilkan performa model
 calibration_table %>%
   modeltime_accuracy() %>%
   table_modeltime_accuracy(.interactive = FALSE)
 ```
 
 ```{r message=FALSE, warning=FALSE}
+# Memvisualisasikan hasil prediksi ke data test
 calibration_table %>%
-
-  
-  # Refit and Forecast Forward
-  modeltime_refit(df) %>%
-  modeltime_forecast(h = "12 months", actual_data = df) %>%
+  modeltime_forecast(actual_data = df_fix) %>%
   plot_modeltime_forecast(.interactive = FALSE)
 ```
 
-## Post Test
+##### **Refit to Full Dataset & Forecast Forward**
 
-1.  Make a forecasting model using bicycle rental data using ARIMA and ETS
+The final stage is to refit the model with full data then forecast Momoshop sales in 2021.
 
-2.  Evaluate the forecasting model that you have created
+```{r message=FALSE, warning=FALSE}
+calibration_table %>%
+  modeltime_refit(df_fix) %>%
+  modeltime_forecast(h = "12 months", actual_data = df_fix) %>%
+  plot_modeltime_forecast(.interactive = FALSE)
+```
 
-3.  Perform forecasting for the next 5 months
+------------------------------------------------------------------------
+
+### **Post Test**
+
+1.  Which model performs better at predicting Momoshop sales? why?
+
+2.  Interpret Momoshop's forecasting sales results in 2021.
+
+3.  If you were a Momoshop management, what action would you take after seeing the sales forecast in 2021.
